# newfriut

server/: .gitignore  .travis.yml  BatPath.bat  BatPath_bak.bat  CMakeLists.txt  CreateServerSln.bat  README.md  config.h.cmake
server/dep/: CMakeLists.txt
server/dep/backtrace/: CMakeLists.txt  build.bat  build.sh
server/dep/backtrace/boost/: backtrace.hpp
server/dep/backtrace/libs/backtrace/src/: backtrace.cpp
server/dep/backtrace/libs/backtrace/test/: test_backtrace.cpp
server/dep/include/boost-extension/: Jamfile.v2  README.rtf  boost-build.jam
server/dep/include/boost-extension/boost/extension/: convenience.hpp  counted_factory.hpp  counted_factory_map.hpp  counted_factorymap.hpp  extension.hpp  factory.hpp  factory_map.hpp  factorymap.hpp  filesystem.hpp  functor.hpp  registry.hpp  shared_library.hpp  zone.hpp
server/dep/include/boost-extension/boost/extension/impl/: library_impl.hpp  linked_library.hpp  typeinfo.hpp
server/dep/lib/x64_release/: .gitignore
server/dep/nedmalloc/: !GenCHM.bat  !MakeMSVCProjs.bat  CMakeLists.txt  Doxyfile  SConscript  SConstruct  doxygen.css  test.c  test.cpp
server/dep/nedmalloc/nedmalloc.xcodeproj/: ned.mode1v3  ned.pbxuser  project.pbxproj
server/dep/recastnavigation/DebugUtils/Include/: DebugDraw.h  DetourDebugDraw.h
server/dep/recastnavigation/DebugUtils/Source/: DebugDraw.cpp  DetourDebugDraw.cpp  RecastDebugDraw.cpp  RecastDump.cpp
server/dep/recastnavigation/Detour/Source/: CMakeLists.txt  DetourNavMeshQuery.cpp
server/dep/recastnavigation/RecastDemo/Contrib/SDL/: readme.txt
server/dep/recastnavigation/RecastDemo/Include/: ChunkyTriMesh.h  ConvexVolumeTool.h  CrowdManager.h  CrowdTool.h  Debug.h  InputGeom.h  MeshLoaderObj.h  NavMeshTesterTool.h  Sample.h  SampleInterfaces.h  Sample_Debug.h  Sample_SoloMeshSimple.h  Sample_SoloMeshTiled.h  Sample_TileMesh.h
server/dep/recastnavigation/RecastDemo/Source/: ConvexVolumeTool.cpp  CrowdManager.cpp  CrowdTool.cpp  Debug.cpp  InputGeom.cpp  MeshLoaderObj.cpp  NavMeshTesterTool.cpp  OffMeshConnectionTool.cpp  Sample.cpp  SampleInterfaces.cpp  Sample_Debug.cpp  Sample_SoloMeshSimple.cpp  Sample_SoloMeshTiled.cpp  Sample_TileMesh.cpp  imgui.cpp  main.cpp
server/dep/src/: CMakeLists.txt
server/dep/src/g3dlite/: CMakeLists.txt  FileSystem.cpp
server/dep/src/zlib/: CMakeLists.txt
server/doc/: EventAI.txt  script_commands.txt
server/sql/: mangos.sql
server/src/: CMakeLists.txt
server/src/bindings/: CMakeLists.txt
server/src/bindings/universal/: CMakeLists.txt  ScriptMgr.cpp  ScriptMgr.h  config.h  system.cpp
server/src/framework/: CMakeLists.txt
server/src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
server/src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
server/src/framework/Platform/: Define.h
server/src/framework/Policies/: CreationPolicy.h  MemoryManagement.cpp  ObjectLifeTime.h  Singleton.h  ThreadingModel.h
server/src/framework/Utilities/: Callback.h  LinkedList.h  UnorderedMapSet.h
server/src/framework/Utilities/LinkedReference/: RefManager.h  Reference.h
server/src/game/: CMakeLists.txt  Creature.cpp  Creature.h  DynamicObject.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  Object.cpp  Object.h  ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h  Player.cpp  Player.h  Unit.cpp  Unit.h  World.cpp  World.h  WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h  pchdef.h
server/src/game/Msg/: BaseCmd.h  HeroCardCmd.h
server/src/game/NetMsgHandle/: ByCmdMsg.h  CmdType.h  GameObjectHandle.cpp  GameObjectHandle.h  NetDispHandle.h  NetMsgHandleManager.cpp  NetMsgHandleManager.h  NetMsgHandleManagerBase.cpp  NetMsgHandleManagerBase.h  NullUserCmd.h  ObjectCmd.h  UtilMsg.cpp  UtilMsg.h
server/src/game/Verify/: VerifyThread.cpp  VerifyThread.h
server/src/mangosd/: CMakeLists.txt  Main.cpp  Master.cpp  WorldRunnable.cpp  mangosd.conf.dist.in
server/src/realmd/: AuthSocket.cpp  AuthSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  SessionManager.cpp  SessionManager.h
server/src/shared/: CMakeLists.txt  Common.cpp  Common.h  LockedQueue.h  SystemConfig.h.in  Version.h
server/src/shared/Auth/: AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  BigNumber.h  HMACSHA1.cpp  HMACSHA1.h  SARC4.cpp  SARC4.h  md5.h
server/src/shared/Config/: Config.cpp  Config.h
server/src/shared/DataStruct/: MBufferDefaultValue.h  MBufferFlag.h  MBufferUtil.cpp  MBufferUtil.h  MByteBuffer.cpp  MByteBuffer.h  MByteConverter.h  MCircularBuffer.cpp  MCircularBuffer.h  MDynBufResizePolicy.cpp  MDynBufResizePolicy.h  MDynBuffer.cpp  MDynBuffer.h  MStorageBuffer.cpp  MStorageBuffer.h  MSystemEndian.h
server/src/shared/Database/: DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h  Database.cpp  Database.h  DatabaseImpl.h  DatabaseMysql.cpp  DatabaseMysql.h  DatabasePostgre.cpp  DatabasePostgre.h  Field.cpp  Field.h  QueryResult.h  QueryResultMysql.cpp  QueryResultPostgre.cpp  SQLStorage.cpp  SQLStorage.h  SQLStorageImpl.h  SqlDelayThread.cpp  SqlDelayThread.h  SqlOperations.cpp  SqlOperations.h  SqlPreparedStatement.cpp  SqlPreparedStatement.h
server/src/shared/Log/: Log.cpp  Log.h
server/src/shared/Network/: MClient.cpp  MClient.h  MClientManager.cpp  MClientManager.h  MClientProcessData.cpp  MClientProcessData.h  MClientThread.cpp  MClientThread.h  MClientThreadSafeData.cpp  MClientThreadSafeData.h  MMsgBuffer.cpp  MMsgBuffer.h  MNetClientBuffer.cpp  MNetClientBuffer.h  NetworkManager.cpp  NetworkManager.h  NetworkThread.cpp  NetworkThread.h  ProtocolDefinitions.h  Socket.cpp  Socket.h
server/src/shared/Platform/: PosixDaemon.cpp  ServiceWin32.cpp  ServiceWin32.h
server/src/shared/Thread/: Threading.cpp  Threading.h
server/src/shared/Util/: Encrypt.cpp  Encrypt.h  Errors.h  MCompress.cpp  MCompress.h  MemOp.cpp  MemOp.h  ProgressBar.cpp  ProgressBar.h  Timer.h  Util.cpp  Util.h  WarnPop.h  WarnPush.h
(+68 files in other folders)
